@@ -4,6 +4,7 @@ import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import ecommerce.beans.Cidade;
 import ecommerce.dao.CidadeDao;
@@ -11,6 +12,7 @@ import ecommerce.dto.CidadeDto;
 import ecommerce.uteis.GerenciadorConversa;
 import ecommerce.uteis.GerenciadorToken;
 import ecommerce.uteis.PermissaoExeption;
+import ecommerce.uteis.TokenException;
 import ecommerce.uteis.Uteis;
 import jakarta.enterprise.context.ConversationScoped;
 import jakarta.inject.Inject;
@@ -21,6 +23,11 @@ import jakarta.inject.Named;
 public class CidadeController implements Serializable {
 
 	private static final long serialVersionUID = 1L;
+
+	private final String consultarCidade = "/ecommerce/paginas/cadastros/consultarCidade.xhtml";
+	private final String cadastrarCidade = "/ecommerce/paginas/cadastros/cadastrarCidade.xhtml";
+
+	private boolean inclusao = false;
 
 	private String mensagem;
 
@@ -54,10 +61,10 @@ public class CidadeController implements Serializable {
 			loginController.possuiPermissao("Pesquisar cidade");
 			conversa.iniciar();
 			token.gerarToken();
-			listaCidadeDto = cidadeDao.buscarUltimosCadastrados().stream().map(CidadeDto::new).toList();
-			atualizarMensagenRodape();
+			listaCidadeDto = cidadeDao.buscarUltimosCadastrados().stream().map(CidadeDto::new).collect(Collectors.toList());
+			atualizarMensagemRodape();
 			argumentoBusca = "";
-			return "/ecommerce/paginas/cadastros/consultarCidade.xhtml";
+			return consultarCidade;
 		} catch (PermissaoExeption e) {
 			uteis.adicionarMensagemErro(e);
 			return null;
@@ -66,26 +73,138 @@ public class CidadeController implements Serializable {
 
 	public void atualizarPesquisa() {
 		try {
-			listaCidadeDto.clear();
 			if (opcaoBusca.get(0).equals(opcaoBuscaSelecionada)) {
+				listaCidadeDto.clear();
 				Cidade c = cidadeDao.getById(Integer.valueOf(argumentoBusca));
 				if (c != null) {
 					listaCidadeDto.add(new CidadeDto(c));
 				}
 			} else if (opcaoBusca.get(1).equals(opcaoBuscaSelecionada)) {
-				listaCidadeDto = cidadeDao.buscarSimilaridade("nome", argumentoBusca).stream().map(CidadeDto::new).toList();
+				listaCidadeDto = cidadeDao.buscarSimilaridade("nome", argumentoBusca).stream().map(CidadeDto::new)
+						.collect(Collectors.toList());
 			} else {
-				listaCidadeDto = cidadeDao.buscarSimilaridade("uf", argumentoBusca).stream().map(CidadeDto::new).toList();
+				listaCidadeDto = cidadeDao.buscarSimilaridade("uf", argumentoBusca).stream().map(CidadeDto::new)
+						.collect(Collectors.toList());
 			}
+			atualizarMensagemRodape();
 		} catch (NumberFormatException e) {
 			uteis.adicionarMensagemAdvertencia("Verifique o argumento digitado e tente novamente.");
 		}
-		atualizarMensagenRodape();
 	}
 
-	private void atualizarMensagenRodape() {
+	private void atualizarMensagemRodape() {
 		mensagem = listaCidadeDto.isEmpty() ? "Não há registros cadastrados no software"
 				: "Ultimos registros cadastrados";
+	}
+
+	public String excluir(Integer id) {
+		try {
+			token.validarToken();
+			loginController.possuiPermissao("Excluir cidade");
+			cidadeDao.excluir(id);
+			atualizarPesquisa();
+			uteis.adicionarMensagemSucessoExclusao();
+			return consultarCidade;
+		} catch (PermissaoExeption | TokenException e) {
+			uteis.adicionarMensagemErro(e);
+			return null;
+		}
+	}
+
+	public String prepararAlteracao(Integer id) {
+
+		try {
+			loginController.possuiPermissao("Alterar cidade");
+			inclusao = false;
+			cidadeDto = new CidadeDto(cidadeDao.getById(id));
+			token.gerarToken();
+			return cadastrarCidade;
+		} catch (PermissaoExeption e) {
+			uteis.adicionarMensagemErro(e);
+			return null;
+		}
+	}
+
+	public String prepararCadastro() {
+		try {
+			loginController.possuiPermissao("Cadastrar cidade");
+			inclusao = true;
+			token.gerarToken();
+			return cadastrarCidade;
+		} catch (PermissaoExeption e) {
+			uteis.adicionarMensagemErro(e);
+			return null;
+		}
+
+	}
+
+	public String confirmar() {
+		try {
+			token.validarToken();
+			if (!validarDados()) {
+				return null;
+			}
+			Cidade c = cidadeDto.toCidade();
+			if (inclusao) {
+				cidadeDao.cadastrar(c);
+				;
+			} else {
+				cidadeDao.editar(c);
+			}
+			uteis.adicionarMensagemSucessoRegistro();
+			return cadastrarCidade;
+		} catch (TokenException e) {
+			uteis.adicionarMensagemErro(e);
+			return null;
+		}
+
+	}
+
+	public String cancelar() {
+		cidadeDto = null;
+		return consultarCidade;
+	}
+
+	private boolean validarDados() {
+		boolean resultado = false;
+		List<Cidade> listaCidade = cidadeDao.consultarCidadeNome(cidadeDto.getNome());
+		if (listaCidade.isEmpty()) {
+			resultado = true;
+		} else if (listaCidade.size() > 1) {
+			resultado = false;
+		} else {
+			Cidade c = listaCidade.get(0);
+			if (c.getCodigo().equals(cidadeDto.getCodigo())) {
+				resultado = true;
+			} else {
+				uteis.adicionarMensagemAdvertencia("O registro alterado já existe!");
+			}
+		}
+		return resultado;
+	}
+
+	public String getMensagem() {
+		return mensagem;
+	}
+
+	public void setMensagem(String mensagem) {
+		this.mensagem = mensagem;
+	}
+
+	public String getArgumentoBusca() {
+		return argumentoBusca;
+	}
+
+	public void setArgumentoBusca(String argumentoBusca) {
+		this.argumentoBusca = argumentoBusca;
+	}
+
+	public String getOpcaoBuscaSelecionada() {
+		return opcaoBuscaSelecionada;
+	}
+
+	public void setOpcaoBuscaSelecionada(String opcaoBuscaSelecionada) {
+		this.opcaoBuscaSelecionada = opcaoBuscaSelecionada;
 	}
 
 	public CidadeDao getCidadeDao() {
@@ -112,12 +231,36 @@ public class CidadeController implements Serializable {
 		this.loginController = loginController;
 	}
 
+	public GerenciadorConversa getConversa() {
+		return conversa;
+	}
+
+	public void setConversa(GerenciadorConversa conversa) {
+		this.conversa = conversa;
+	}
+
+	public GerenciadorToken getToken() {
+		return token;
+	}
+
+	public void setToken(GerenciadorToken token) {
+		this.token = token;
+	}
+
 	public CidadeDto getCidadeDto() {
 		return cidadeDto;
 	}
 
 	public void setCidadeDto(CidadeDto cidadeDto) {
 		this.cidadeDto = cidadeDto;
+	}
+
+	public List<CidadeDto> getListaCidadeDto() {
+		return listaCidadeDto;
+	}
+
+	public void setListaCidadeDto(List<CidadeDto> listaCidadeDto) {
+		this.listaCidadeDto = listaCidadeDto;
 	}
 
 	public static long getSerialversionuid() {
